--- a/Сем 5/Операционные системы/Lab-1/Diy-shell-benchmark-24y-Kuchizu/source/CMakeLists.txt
+++ b/Сем 5/Операционные системы/Lab-1/Diy-shell-benchmark-24y-Kuchizu/source/CMakeLists.txt
@@ -1,7 +1,9 @@
+#source/CMakeLists.txt
+
 get_filename_component(MONOLITH_INCLUDE_PATH "." ABSOLUTE)
 get_filename_component(MONOLITH_SOURCE_PATH "./${PROJECT_NAME}" ABSOLUTE)
 
-file(GLOB_RECURSE MONOLITH_SOURCES CONFIGURE_DEPENDS *.hpp *.cpp)
+file(GLOB_RECURSE MONOLITH_SOURCES CONFIGURE_DEPENDS *.hpp *.cpp *.c)
 
 set(MONOLITH_LIB_SOURCES ${MONOLITH_SOURCES})
 
