--- a/Сем 5/Операционные системы/Lab-1/Diy-shell-benchmark-24y-Kuchizu/benchmark/CMakeLists.txt
+++ b/Сем 5/Операционные системы/Lab-1/Diy-shell-benchmark-24y-Kuchizu/benchmark/CMakeLists.txt
@@ -1,3 +1,5 @@
+#benchmark/CMakeLists.txt
+
 get_filename_component(MONOLITH_BENCH_SOURCE_PATH "./${PROJECT_NAME}" ABSOLUTE)
 
 set(MONOLITH_BENCH_TARGET_BASE "${PROJECT_NAME}-bench")
