--- a/Сем 5/Операционные системы/Lab-1/Diy-shell-benchmark-24y-Kuchizu/test/CMakeLists.txt
+++ b/Сем 5/Операционные системы/Lab-1/Diy-shell-benchmark-24y-Kuchizu/test/CMakeLists.txt
@@ -1,9 +1,11 @@
+#test/CMakeLists.txt
+
 get_filename_component(MONOLITH_TEST_INCLUDE_PATH "." ABSOLUTE)
 get_filename_component(MONOLITH_TEST_SOURCE_PATH "./${PROJECT_NAME}" ABSOLUTE)
 
 set(MONOLITH_TEST_TARGET "${PROJECT_NAME}-test")
 
-file(GLOB_RECURSE MONOLITH_TEST_SOURCES CONFIGURE_DEPENDS *.hpp *.cpp)
+file(GLOB_RECURSE MONOLITH_TEST_SOURCES CONFIGURE_DEPENDS *.hpp *.cpp *.c)
 
 add_executable(${MONOLITH_TEST_TARGET} ${MONOLITH_TEST_SOURCES})
 
